; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzutil/os/linux/extr_zutil_device_path_os.c_zfs_get_underlying_path.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzutil/os/linux/extr_zutil_device_path_os.c_zfs_get_underlying_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @zfs_get_underlying_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* null, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %27

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i8* @dm_get_underlying_path(i8* %10)
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %9
  %15 = load i8*, i8** %3, align 8
  %16 = call i8* @realpath(i8* %15, i32* null)
  store i8* %16, i8** %5, align 8
  br label %17

17:                                               ; preds = %14, %9
  %18 = load i8*, i8** %5, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %25

20:                                               ; preds = %17
  %21 = load i8*, i8** %5, align 8
  %22 = call i8* @zfs_strip_partition_path(i8* %21)
  store i8* %22, i8** %4, align 8
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @free(i8* %23)
  br label %25

25:                                               ; preds = %20, %17
  %26 = load i8*, i8** %4, align 8
  store i8* %26, i8** %2, align 8
  br label %27

27:                                               ; preds = %25, %8
  %28 = load i8*, i8** %2, align 8
  ret i8* %28
}

declare dso_local i8* @dm_get_underlying_path(i8*) #1

declare dso_local i8* @realpath(i8*, i32*) #1

declare dso_local i8* @zfs_strip_partition_path(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
